--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,16 @@
   <description>Examen2</description>
 
   
+    <scm>
+    <connection>scm:git:https://github.com/fernandaquesadavega/IF6100Examen2_C06194.git</connection>
+        <developerConnection>scm:git:https://github.com/fernandaquesadavega/IF6100Examen2_C06194
+        </developerConnection>
+        <url>https://github.com/fernandaquesadavega/IF6100Examen2_C06194
+        </url>
+        <tag>main</tag>
+    </scm>
+
+  
     <dependencies>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
